Fix content overflow issue

--- a/assets/critical.scss
+++ b/assets/critical.scss
@@ -54,7 +54,6 @@ html {
     font-size: 16px;
 }
 body {
-    display: flex;
     padding: 2em;
     font-family: 'Rubik', sans-serif;
     font-weight: 400;
